2002-07-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/enable-multiprocessing.m4: Fix typo.
	* aclocal/prog-cc.m4: Remove obsolete comments.
	Comment out GCCSED.

2002-06-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/prog-ccas.m4: New.
	* aclocal/canonicalize-tools.m4: Remove AS, OBJCOPY, NM, SIZE, STRIP.
	RTEMS_GCC_PRINT
	* aclocal/check-multiprocessing.m4: Fix typo.
	* automake/compile.am: Remove CXX support.
	Replace AS by CCAS. Remove LINK_LIBS, LINK_OBJS, LINK_FILES.

2002-06-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use AC_CONFIG_AUX_DIR(..).

2002-06-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove references to RTEMS_BSP.
	* aclocal/check-multiprocessing.m4: Remove references to RTEMS_BSP.
	Allow building w/ --enable-multiprocessing --enable-multilib.
	* aclocal/enable-multiprocessing.m4: 
	Eliminate RTEMS_HAS_MULTIPROCESSING.

2002-06-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Fix stupid typo in previous patch.

2002-06-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add librpc. AC_PROG_RANLIB.
	* wrapup/Makefile.am: Add librpc.
	Use relative path to lib*.a for
	POSIX_OBJS, ITRON_OBJS, NETWORKING_OBJS.

2002-06-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/subdirs.m4: Remove.

2002-06-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Use relative path to lib*.a for
	LIBCSUPPORT_OBJS, LIBBLOCK_OBJS, LIBDOSFS_OBJS, LIBIMFS_OBJS.

2002-06-17	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Include $(top_srcdir)/automake/*.am.
	Use aclocal.
	* sapi/include/Makefile.am: Include $(top_srcdir)/automake/*.am.
	* sapi/Makefile.am: Include $(top_srcdir)/automake/*.am.
	* sapi/inline/Makefile.am: Include $(top_srcdir)/automake/*.am.
	* sapi/macros/Makefile.am: Include $(top_srcdir)/automake/*.am.
	* sapi/src/Makefile.am: Include $(top_srcdir)/automake/*.am.
	* score/include/Makefile.am: Include $(top_srcdir)/automake/*.am.