@@ -27,8 +27,6 @@ RTEMS_CHECK_RTEMS_DEBUG
 RTEMS_CHECK_CPU
 RTEMS_CANONICAL_HOST
 
-RTEMS_PROJECT_ROOT
-
 RTEMS_PROG_CC_FOR_TARGET([-ansi -fasm])
 RTEMS_CANONICALIZE_TOOLS
 AC_PROG_RANLIB
